crates/ruff_linter/src/rules/flake8_unused_arguments/snapshots/ruff_linter__rules__flake8_unused_arguments__tests__ARG004_ARG.py.snap
---
source: crates/ruff_linter/src/rules/flake8_unused_arguments/mod.rs
---
ARG004 Unused static method argument: `cls`
  --> ARG.py:51:11
   |
50 |     @staticmethod
51 |     def f(cls, x):
   |           ^^^
52 |         print("Hello, world!")

ARG004 Unused static method argument: `x`
  --> ARG.py:51:16
   |
50 |     @staticmethod
51 |     def f(cls, x):
   |                ^
52 |         print("Hello, world!")

ARG004 Unused static method argument: `x`
  --> ARG.py:55:11
   |
54 |     @staticmethod
55 |     def f(x):
   |           ^
56 |         print("Hello, world!")

ARG004 Unused static method argument: `x`
   --> ARG.py:213:22
    |
211 | ###
212 | class C:
213 |     def __new__(cls, x):
    |                      ^
214 |         print("Hello, world!")
