crates/ruff_linter/src/rules/flake8_unused_arguments/snapshots/ruff_linter__rules__flake8_unused_arguments__tests__enforce_variadic_names.snap
---
source: crates/ruff_linter/src/rules/flake8_unused_arguments/mod.rs
---
ARG001 Unused function argument: `a`
 --> ignore_variadic_names.py:1:7
  |
1 | def f(a, b):
  |       ^
2 |     print("Hello, world!")

ARG001 Unused function argument: `b`
 --> ignore_variadic_names.py:1:10
  |
1 | def f(a, b):
  |          ^
2 |     print("Hello, world!")

ARG001 Unused function argument: `a`
 --> ignore_variadic_names.py:5:7
  |
5 | def f(a, b, *args, **kwargs):
  |       ^
6 |     print("Hello, world!")

ARG001 Unused function argument: `b`
 --> ignore_variadic_names.py:5:10
  |
5 | def f(a, b, *args, **kwargs):
  |          ^
6 |     print("Hello, world!")

ARG001 Unused function argument: `args`
 --> ignore_variadic_names.py:5:14
  |
5 | def f(a, b, *args, **kwargs):
  |              ^^^^
6 |     print("Hello, world!")

ARG001 Unused function argument: `kwargs`
 --> ignore_variadic_names.py:5:22
  |
5 | def f(a, b, *args, **kwargs):
  |                      ^^^^^^
6 |     print("Hello, world!")

ARG002 Unused method argument: `a`
  --> ignore_variadic_names.py:10:17
   |
 9 | class C:
10 |     def f(self, a, b):
   |                 ^
11 |         print("Hello, world!")

ARG002 Unused method argument: `b`
  --> ignore_variadic_names.py:10:20
   |
 9 | class C:
10 |     def f(self, a, b):
   |                    ^
11 |         print("Hello, world!")

ARG002 Unused method argument: `a`
  --> ignore_variadic_names.py:13:17
   |
11 |         print("Hello, world!")
12 |
13 |     def f(self, a, b, *args, **kwargs):
   |                 ^
14 |         print("Hello, world!")

ARG002 Unused method argument: `b`
  --> ignore_variadic_names.py:13:20
   |
11 |         print("Hello, world!")
12 |
13 |     def f(self, a, b, *args, **kwargs):
   |                    ^
14 |         print("Hello, world!")

ARG002 Unused method argument: `args`
  --> ignore_variadic_names.py:13:24
   |
11 |         print("Hello, world!")
12 |
13 |     def f(self, a, b, *args, **kwargs):
   |                        ^^^^
14 |         print("Hello, world!")

ARG002 Unused method argument: `kwargs`
  --> ignore_variadic_names.py:13:32
   |
11 |         print("Hello, world!")
12 |
13 |     def f(self, a, b, *args, **kwargs):
   |                                ^^^^^^
14 |         print("Hello, world!")
